--- a/src/components/pages/styles/styles.css
+++ b/src/components/pages/styles/styles.css
@@ -1,14 +1,14 @@
-.main-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap
-}
-
 .title {
     text-align: center;
     font-weight: 800;
     font-size: 2em;
     width: 100%;
+}
+
+.progress-bar {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
 }
 
 .playPause-container {
